--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <table cellspacing="20">
     <tr>
       <td> <img src="Tulips.jpg" alt="Tulips" height="200" width="200"></td>
-      <td><em> Im a student</em><br>
+      <td><em> Im a student.</em><br>
         <p><strong>😎The coder Dinesh😎</strong></td></p>
         </td>
     </tr>
