--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,7 +7,7 @@
   <body>
       <h3>Hobbies</h3>
     <ol>
-      <li><a href="https://www.youtube.com/watch?v=szPez5q2mY0">playing cricket</a>playing cricket</li>
+      <li><a href="https://www.youtube.com/watch?v=szPez5q2mY0">playing cricket</a></li>
       <li>sighting</li>
     </ol>
   </body>
